[package]
name = "andreatui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.24.0", features = ["all-widgets"] }
crossterm = "0.27.0"
color-eyre = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
